traefik/kubernetes/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.kube.mandariini.uk`)
      middlewares:
##        - name: traefik-dashboard-basicauth
##          namespace: traefik
        - name: authentik
          namespace: authentik
      priority: 10
      services:
        - name: api@internal
          kind: TraefikService
    - kind: Rule
      match: "Host(`traefik.kube.mandariini.uk`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
          - kind: Service
            name: ak-outpost-authentik-embedded-outpost
            namespace: authentik
            port: 9000
  tls:
    secretName: kube-mandariini-uk-tls
